@@ -33,15 +33,16 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import jakarta.annotation.Resource;
+import javax.annotation.Resource;
+
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 import org.springframework.core.Ordered;
 import org.springframework.core.annotation.MergedAnnotation.Adapt;
-import org.springframework.core.annotation.MergedAnnotations.Search;
 import org.springframework.core.annotation.MergedAnnotations.SearchStrategy;
 import org.springframework.core.annotation.subpackage.NonPublicAnnotatedClass;
 import org.springframework.core.testfixture.stereotype.Component;
@@ -74,137 +75,6 @@ import static org.assertj.core.api.Assertions.entry;
  * @see MergedAnnotationClassLoaderTests
  */
 class MergedAnnotationsTests {
-
-	/**
-	 * Subset (and duplication) of other tests in {@link MergedAnnotationsTests}
-	 * that verify behavior of the fluent {@link Search} API.
-	 * @since 6.0
-	 */
-	@Nested
-	class FluentSearchApiTests {
-
-		@Test
-		void preconditions() {
-			assertThatIllegalArgumentException()
-				.isThrownBy(() -> MergedAnnotations.search(null))
-				.withMessage("SearchStrategy must not be null");
-
-			Search search = MergedAnnotations.search(SearchStrategy.SUPERCLASS);
-
-			assertThatIllegalArgumentException()
-				.isThrownBy(() -> search.withEnclosingClasses(null))
-				.withMessage("Predicate must not be null");
-			assertThatIllegalStateException()
-				.isThrownBy(() -> search.withEnclosingClasses(Search.always))
-				.withMessage("A custom 'searchEnclosingClass' predicate can only be combined with SearchStrategy.TYPE_HIERARCHY");
-
-			assertThatIllegalArgumentException()
-				.isThrownBy(() -> search.withAnnotationFilter(null))
-				.withMessage("AnnotationFilter must not be null");
-
-			assertThatIllegalArgumentException()
-				.isThrownBy(() -> search.withRepeatableContainers(null))
-				.withMessage("RepeatableContainers must not be null");
-
-			assertThatIllegalArgumentException()
-				.isThrownBy(() -> search.from(null))
-				.withMessage("AnnotatedElement must not be null");
-		}
-
-		@Test
-		void searchFromClassWithDefaultAnnotationFilterAndDefaultRepeatableContainers() {
-			Stream<Class<?>> classes = MergedAnnotations.search(SearchStrategy.DIRECT)
-				.from(TransactionalComponent.class)
-				.stream()
-				.map(MergedAnnotation::getType);
-			assertThat(classes).containsExactly(Transactional.class, Component.class, Indexed.class);
-		}
-
-		@Test
-		void searchFromClassWithCustomAnnotationFilter() {
-			Stream<Class<?>> classes = MergedAnnotations.search(SearchStrategy.DIRECT)
-				.withAnnotationFilter(annotationName -> annotationName.endsWith("Indexed"))
-				.from(TransactionalComponent.class)
-				.stream()
-				.map(MergedAnnotation::getType);
-			assertThat(classes).containsExactly(Transactional.class, Component.class);
-		}
-
-		@Test
-		void searchFromClassWithCustomRepeatableContainers() {
-			assertThat(MergedAnnotations.from(HierarchyClass.class).stream(TestConfiguration.class)).isEmpty();
-			RepeatableContainers containers = RepeatableContainers.of(TestConfiguration.class, Hierarchy.class);
-
-			MergedAnnotations annotations = MergedAnnotations.search(SearchStrategy.DIRECT)
-				.withRepeatableContainers(containers)
-				.from(HierarchyClass.class);
-			assertThat(annotations.stream(TestConfiguration.class))
-				.map(annotation -> annotation.getString("location"))
-				.containsExactly("A", "B");
-			assertThat(annotations.stream(TestConfiguration.class))
-				.map(annotation -> annotation.getString("value"))
-				.containsExactly("A", "B");
-		}
-
-		/**
-		 * @since 6.0
-		 */
-		@Test
-		void searchFromNonAnnotatedInnerClassWithAnnotatedEnclosingClassWithEnclosingClassPredicates() {
-			Class<?> testCase = AnnotatedClass.NonAnnotatedInnerClass.class;
-			Search search = MergedAnnotations.search(SearchStrategy.TYPE_HIERARCHY);
-
-			assertThat(search.from(testCase).stream()).isEmpty();
-			assertThat(search.withEnclosingClasses(Search.never).from(testCase).stream()).isEmpty();
-			assertThat(search.withEnclosingClasses(ClassUtils::isStaticClass).from(testCase).stream()).isEmpty();
-
-			Stream<Class<?>> classes = search.withEnclosingClasses(ClassUtils::isInnerClass)
-					.from(testCase)
-					.stream()
-					.map(MergedAnnotation::getType);
-			assertThat(classes).containsExactly(Component.class, Indexed.class);
-
-			classes = search.withEnclosingClasses(Search.always)
-					.from(testCase)
-					.stream()
-					.map(MergedAnnotation::getType);
-			assertThat(classes).containsExactly(Component.class, Indexed.class);
-
-			classes = search.withEnclosingClasses(ClassUtils::isInnerClass)
-					.withRepeatableContainers(RepeatableContainers.none())
-					.withAnnotationFilter(annotationName -> annotationName.endsWith("Indexed"))
-					.from(testCase)
-					.stream()
-					.map(MergedAnnotation::getType);
-			assertThat(classes).containsExactly(Component.class);
-		}
-
-		/**
-		 * @since 6.0
-		 */
-		@Test
-		void searchFromNonAnnotatedStaticNestedClassWithAnnotatedEnclosingClassWithEnclosingClassPredicates() {
-			Class<?> testCase = AnnotatedClass.NonAnnotatedStaticNestedClass.class;
-			Search search = MergedAnnotations.search(SearchStrategy.TYPE_HIERARCHY);
-
-			assertThat(search.from(testCase).stream()).isEmpty();
-			assertThat(search.withEnclosingClasses(Search.never).from(testCase).stream()).isEmpty();
-			assertThat(search.withEnclosingClasses(ClassUtils::isInnerClass).from(testCase).stream()).isEmpty();
-
-			Stream<Class<?>> classes = search.withEnclosingClasses(ClassUtils::isStaticClass)
-					.from(testCase)
-					.stream()
-					.map(MergedAnnotation::getType);
-			assertThat(classes).containsExactly(Component.class, Indexed.class);
-
-			classes = search.withEnclosingClasses(Search.always)
-					.from(testCase)
-					.stream()
-					.map(MergedAnnotation::getType);
-			assertThat(classes).containsExactly(Component.class, Indexed.class);
-		}
-
-	}
 
 	@Nested
 	class ConventionBasedAnnotationAttributeOverrideTests {
@@ -846,7 +716,20 @@ class MergedAnnotationsTests {
 	}
 
 	@Test
-	@SuppressWarnings("deprecation")
+	void streamTypeHierarchyAndEnclosingClassesFromNonAnnotatedInnerClassWithAnnotatedEnclosingClass() {
+		Stream<Class<?>> classes = MergedAnnotations.from(AnnotatedClass.NonAnnotatedInnerClass.class,
+				SearchStrategy.TYPE_HIERARCHY_AND_ENCLOSING_CLASSES).stream().map(MergedAnnotation::getType);
+		assertThat(classes).containsExactly(Component.class, Indexed.class);
+	}
+
+	@Test
+	void streamTypeHierarchyAndEnclosingClassesFromNonAnnotatedStaticNestedClassWithAnnotatedEnclosingClass() {
+		Stream<Class<?>> classes = MergedAnnotations.from(AnnotatedClass.NonAnnotatedStaticNestedClass.class,
+				SearchStrategy.TYPE_HIERARCHY_AND_ENCLOSING_CLASSES).stream().map(MergedAnnotation::getType);
+		assertThat(classes).containsExactly(Component.class, Indexed.class);
+	}
+
+	@Test
 	void getFromMethodWithMethodAnnotationOnLeaf() throws Exception {
 		Method method = Leaf.class.getMethod("annotatedOnLeaf");
 		assertThat(method.getAnnotation(Order.class)).isNotNull();
@@ -1503,26 +1386,6 @@ class MergedAnnotationsTests {
 		assertThat(synthesizedComponent.value()).isEqualTo("webController");
 	}
 
-	/**
-	 * @since 6.0
-	 */
-	@Test
-	void synthesizedAnnotationShouldReuseJdkProxyClass() throws Exception {
-		Method method = WebController.class.getMethod("handleMappedWithValueAttribute");
-
-		RequestMapping jdkRequestMapping = method.getAnnotation(RequestMapping.class);
-		assertThat(jdkRequestMapping).isNotNull();
-		assertThat(jdkRequestMapping.value()).containsExactly("/test");
-		assertThat(jdkRequestMapping.path()).containsExactly("");
-
-		RequestMapping synthesizedRequestMapping = MergedAnnotation.from(jdkRequestMapping).synthesize();
-		assertSynthesized(synthesizedRequestMapping);
-		assertThat(synthesizedRequestMapping.value()).containsExactly("/test");
-		assertThat(synthesizedRequestMapping.path()).containsExactly("/test");
-
-		assertThat(jdkRequestMapping.getClass()).isSameAs(synthesizedRequestMapping.getClass());
-	}
-
 	@Test
 	void synthesizeAlreadySynthesized() throws Exception {
 		Method method = WebController.class.getMethod("handleMappedWithValueAttribute");
@@ -1895,7 +1758,7 @@ class MergedAnnotationsTests {
 				Adapt.ANNOTATION_TO_MAP);
 		Map<String, Object>[] filters = (Map[]) map.get("excludeFilters");
 		List<String> patterns = Arrays.stream(filters).map(
-				m -> (String) m.get("pattern")).toList();
+				m -> (String) m.get("pattern")).collect(Collectors.toList());
 		assertThat(patterns).containsExactly("*Foo", "*Bar");
 		filters[0].put("pattern", "newFoo");
 		filters[0].put("enigma", 42);
@@ -2442,21 +2305,13 @@ class MergedAnnotationsTests {
 	@Retention(RetentionPolicy.RUNTIME)
 	@interface ConventionBasedComposedContextConfiguration {
 
-		// Do NOT use @AliasFor here until Spring 6.1
-		// @AliasFor(annotation = ContextConfiguration.class)
 		String[] locations() default {};
-
-		// Do NOT use @AliasFor here until Spring 6.1
-		// @AliasFor(annotation = ContextConfiguration.class)
-		Class<?>[] classes() default {};
 	}
 
 	@ContextConfiguration(value = "duplicateDeclaration")
 	@Retention(RetentionPolicy.RUNTIME)
 	@interface InvalidConventionBasedComposedContextConfiguration {
 
-		// Do NOT use @AliasFor here until Spring 6.1
-		// @AliasFor(annotation = ContextConfiguration.class)
 		String[] locations();
 	}
 
@@ -2468,8 +2323,6 @@ class MergedAnnotationsTests {
 	@Retention(RetentionPolicy.RUNTIME)
 	@interface HalfConventionBasedAndHalfAliasedComposedContextConfiguration {
 
-		// Do NOT use @AliasFor here until Spring 6.1
-		// @AliasFor(annotation = ContextConfiguration.class)
 		String[] locations() default {};
 
 		@AliasFor(annotation = ContextConfiguration.class, attribute = "locations")
@@ -2591,13 +2444,9 @@ class MergedAnnotationsTests {
 		@AliasFor(annotation = ContextConfiguration.class, attribute = "locations")
 		String[] locations() default {};
 
-		// Do NOT use @AliasFor(annotation = ...) here until Spring 6.1
-		// @AliasFor(annotation = ContextConfiguration.class, attribute = "classes")
 		@AliasFor("value")
 		Class<?>[] classes() default {};
 
-		// Do NOT use @AliasFor(annotation = ...) here until Spring 6.1
-		// @AliasFor(annotation = ContextConfiguration.class, attribute = "classes")
 		@AliasFor("classes")
 		Class<?>[] value() default {};
 	}
@@ -2634,8 +2483,6 @@ class MergedAnnotationsTests {
 	@Retention(RetentionPolicy.RUNTIME)
 	@interface ConventionBasedSinglePackageComponentScan {
 
-		// Do NOT use @AliasFor here until Spring 6.1
-		// @AliasFor(annotation = ComponentScan.class)
 		String basePackages();
 	}
 
@@ -3226,8 +3073,6 @@ class MergedAnnotationsTests {
 	@RequestMapping(method = RequestMethod.POST, name = "")
 	@interface PostMapping {
 
-		// Do NOT use @AliasFor here until Spring 6.1
-		// @AliasFor(annotation = RequestMapping.class)
 		String path() default "";
 	}
 
@@ -3266,14 +3111,14 @@ class MergedAnnotationsTests {
 	}
 
 	/**
-	 * Mimics jakarta.persistence.Id
+	 * Mimics javax.persistence.Id
 	 */
 	@Retention(RUNTIME)
 	@interface Id {
 	}
 
 	/**
-	 * Mimics jakarta.persistence.GeneratedValue
+	 * Mimics javax.persistence.GeneratedValue
 	 */
 	@Retention(RUNTIME)
 	@interface GeneratedValue {
