@@ -20,6 +20,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 import org.reactivestreams.Publisher;
 import reactor.core.publisher.Flux;
@@ -148,7 +149,7 @@ public abstract class AbstractClientHttpRequest implements ClientHttpRequest {
 		}
 
 		List<? extends Publisher<Void>> actions = this.commitActions.stream()
-				.map(Supplier::get).toList();
+				.map(Supplier::get).collect(Collectors.toList());
 
 		return Flux.concat(actions).then();
 	}
