@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,13 +18,15 @@ package org.springframework.web.cors;
 
 import java.time.Duration;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
-import java.util.function.Consumer;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import org.springframework.http.HttpMethod;
 import org.springframework.lang.Nullable;
@@ -63,10 +65,11 @@ public class CorsConfiguration {
 
 	private static final List<String> DEFAULT_PERMIT_ALL = Collections.singletonList(ALL);
 
-	private static final List<HttpMethod> DEFAULT_METHODS = List.of(HttpMethod.GET, HttpMethod.HEAD);
+	private static final List<HttpMethod> DEFAULT_METHODS = Collections.unmodifiableList(
+			Arrays.asList(HttpMethod.GET, HttpMethod.HEAD));
 
-	private static final List<String> DEFAULT_PERMIT_METHODS = List.of(HttpMethod.GET.name(),
-			HttpMethod.HEAD.name(), HttpMethod.POST.name());
+	private static final List<String> DEFAULT_PERMIT_METHODS = Collections.unmodifiableList(
+			Arrays.asList(HttpMethod.GET.name(), HttpMethod.HEAD.name(), HttpMethod.POST.name()));
 
 
 	@Nullable
@@ -119,16 +122,9 @@ public class CorsConfiguration {
 
 
 	/**
-	 * A list of origins for which cross-origin requests are allowed where each
-	 * value may be one of the following:
-	 * <ul>
-	 * <li>a specific domain, e.g. {@code "https://domain1.com"}
-	 * <li>comma-delimited list of specific domains, e.g.
-	 * {@code "https://a1.com,https://a2.com"}; this is convenient when a value
-	 * is resolved through a property placeholder, e.g. {@code "${origin}"};
-	 * note that such placeholders must be resolved externally.
-	 * <li>the CORS defined special value {@code "*"} for all origins
-	 * </ul>
+	 * A list of origins for which cross-origin requests are allowed. Values may
+	 * be a specific domain, e.g. {@code "https://domain1.com"}, or the CORS
+	 * defined special value {@code "*"} for all origins.
 	 * <p>For matched pre-flight and actual requests the
 	 * {@code Access-Control-Allow-Origin} response header is set either to the
 	 * matched domain value or to {@code "*"}. Keep in mind however that the
@@ -141,15 +137,8 @@ public class CorsConfiguration {
 	 * {@code @CrossOrigin}, via {@link #applyPermitDefaultValues()}.
 	 */
 	public void setAllowedOrigins(@Nullable List<String> origins) {
-		if (origins == null) {
-			this.allowedOrigins = null;
-		}
-		else {
-			this.allowedOrigins = new ArrayList<>(origins.size());
-			for (String origin : origins) {
-				addAllowedOrigin(origin);
-			}
-		}
+		this.allowedOrigins = (origins == null ? null :
+				origins.stream().filter(Objects::nonNull).map(this::trimTrailingSlash).collect(Collectors.toList()));
 	}
 
 	private String trimTrailingSlash(String origin) {
@@ -177,10 +166,8 @@ public class CorsConfiguration {
 		else if (this.allowedOrigins == DEFAULT_PERMIT_ALL && CollectionUtils.isEmpty(this.allowedOriginPatterns)) {
 			setAllowedOrigins(DEFAULT_PERMIT_ALL);
 		}
-		parseCommaDelimitedOrigin(origin, value -> {
-			value = trimTrailingSlash(value);
-			this.allowedOrigins.add(value);
-		});
+		origin = trimTrailingSlash(origin);
+		this.allowedOrigins.add(origin);
 	}
 
 	/**
@@ -193,16 +180,12 @@ public class CorsConfiguration {
 	 * domain1.com on port 8080 or port 8081
 	 * <li>{@literal https://*.domain1.com:[*]} -- domains ending with
 	 * domain1.com on any port, including the default port
-	 * <li>comma-delimited list of patters, e.g.
-	 * {@code "https://*.a1.com,https://*.a2.com"}; this is convenient when a
-	 * value is resolved through a property placeholder, e.g. {@code "${origin}"};
-	 * note that such placeholders must be resolved externally.
 	 * </ul>
 	 * <p>In contrast to {@link #setAllowedOrigins(List) allowedOrigins} which
 	 * only supports "*" and cannot be used with {@code allowCredentials}, when
 	 * an allowedOriginPattern is matched, the {@code Access-Control-Allow-Origin}
 	 * response header is set to the matched origin and not to {@code "*"} nor
-	 * to the pattern. Therefore, allowedOriginPatterns can be used in combination
+	 * to the pattern. Therefore allowedOriginPatterns can be used in combination
 	 * with {@link #setAllowCredentials} set to {@code true}.
 	 * <p>By default this is not set.
 	 * @since 5.3
@@ -231,7 +214,7 @@ public class CorsConfiguration {
 		}
 		return this.allowedOriginPatterns.stream()
 				.map(OriginPattern::getDeclaredPattern)
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	/**
@@ -245,40 +228,10 @@ public class CorsConfiguration {
 		if (this.allowedOriginPatterns == null) {
 			this.allowedOriginPatterns = new ArrayList<>(4);
 		}
-		parseCommaDelimitedOrigin(originPattern, value -> {
-			value = trimTrailingSlash(value);
-			this.allowedOriginPatterns.add(new OriginPattern(value));
-			if (this.allowedOrigins == DEFAULT_PERMIT_ALL) {
-				this.allowedOrigins = null;
-			}
-		});
-	}
-
-	private static void parseCommaDelimitedOrigin(String rawValue, Consumer<String> valueConsumer) {
-		if (rawValue.indexOf(',') == -1) {
-			valueConsumer.accept(rawValue);
-			return;
-		}
-		int start = 0;
-		boolean withinPortRange = false;
-		for (int current = 0; current < rawValue.length(); current++) {
-			switch (rawValue.charAt(current)) {
-				case '[':
-					withinPortRange = true;
-					break;
-				case ']':
-					withinPortRange = false;
-					break;
-				case ',':
-					if (!withinPortRange) {
-						valueConsumer.accept(rawValue.substring(start, current).trim());
-						start = current + 1;
-					}
-					break;
-			}
-		}
-		if (start < rawValue.length()) {
-			valueConsumer.accept(rawValue.substring(start));
+		originPattern = trimTrailingSlash(originPattern);
+		this.allowedOriginPatterns.add(new OriginPattern(originPattern));
+		if (this.allowedOrigins == DEFAULT_PERMIT_ALL) {
+			this.allowedOrigins = null;
 		}
 	}
 
@@ -305,7 +258,7 @@ public class CorsConfiguration {
 					this.resolvedMethods = null;
 					break;
 				}
-				this.resolvedMethods.add(HttpMethod.valueOf(method));
+				this.resolvedMethods.add(HttpMethod.resolve(method));
 			}
 		}
 		else {
@@ -349,7 +302,7 @@ public class CorsConfiguration {
 				this.resolvedMethods = null;
 			}
 			else if (this.resolvedMethods != null) {
-				this.resolvedMethods.add(HttpMethod.valueOf(method));
+				this.resolvedMethods.add(HttpMethod.resolve(method));
 			}
 		}
 	}
@@ -494,7 +447,7 @@ public class CorsConfiguration {
 		if (this.allowedMethods == null) {
 			this.allowedMethods = DEFAULT_PERMIT_METHODS;
 			this.resolvedMethods = DEFAULT_PERMIT_METHODS
-					.stream().map(HttpMethod::valueOf).toList();
+					.stream().map(HttpMethod::resolve).collect(Collectors.toList());
 		}
 		if (this.allowedHeaders == null) {
 			this.allowedHeaders = DEFAULT_PERMIT_ALL;
